<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since</string>
    <string name="about_developername">hello@dummy.com</string>
    <string name="about_feedbacklink">hello@dummy.com</string>
    <string name="about_invitelink">Share the app</string>
    <string name="about_rateuslink">Rate the app</string>
    <string name="acceptAndContinue">Accept and Continue</string>
    <string name="add_free_version">Ads Free Version</string>
    <string name="add_new_category">Add New Category</string>
    <string name="address">Address</string>
    <string name="adult">Adult</string>
    <string name="amount">Amount</string>
    <string name="appTitle">Wedding Planner &amp; Organizer</string>
    <string name="app_description1">We care about your privacy and data security. We keep this app free by showing ads.</string>
    <string name="app_description2">Can we continue to use your data to tailor ads for you?</string>
    <string name="app_description3">You can change your choice anytime for App in the app settings.</string>
    <string name="app_name">Wedding Planner</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appversion">V.4.0.0</string>
    <string name="baby">Baby</string>
    <string name="backup_transfer_guid">Backup Transfer Guide</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="budget">Budget</string>
    <string name="buy_plan">Buy Plan</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="ceremony_date">Ceremony Date</string>
    <string name="ceremony_time">Ceremony time</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="child">Child</string>
    <string name="clear">Clear</string>
    <string name="clear_msg">Are you sure want to clear</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="companion_details">Companion Details</string>
    <string name="companions">Companions</string>
    <string name="completed">Completed</string>
    <string name="contact_details">Contact Details</string>
    <string name="cost_details">Budget Details</string>
    <string name="cost_payments">Budget Payments</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="delete_all_related_data">It will be deleted all related data of this</string>
    <string name="delete_msg">Are you sure want to delete</string>
    <string name="delete_successfully">Delete Successfully</string>
    <string name="demo">demo</string>
    <string name="drawerTitleAbout">About</string>
    <string name="drawerTitleBudget">Budget</string>
    <string name="drawerTitleCheckList">Task List</string>
    <string name="drawerTitleDemoList">DemoList</string>
    <string name="drawerTitleFeedback">Feedback</string>
    <string name="drawerTitleGuests">Guests</string>
    <string name="drawerTitleHome">Dashboard</string>
    <string name="drawerTitlePrivacyPolicy">Privacy Policy</string>
    <string name="drawerTitleProVersion">Pro Version</string>
    <string name="drawerTitleRatting">Rate Us</string>
    <string name="drawerTitleSetting">Setting</string>
    <string name="drawerTitleShare">Share with friends</string>
    <string name="drawerTitleTermsOfService">Terms of Service</string>
    <string name="drawerTitleVendors">Vendors</string>
    <string name="email_id">Email Id</string>
    <string name="end_time">Last Time</string>
    <string name="error_to_retrieve_file">Error retrieving files</string>
    <string name="estimated_amount">Estimated Amount</string>
    <string name="exit">Exit</string>
    <string name="expired_date">Expired Date</string>
    <string name="export_successfully">Export Successfully</string>
    <string name="export_to_pdf">Export to Pdf</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_to_export">Failed to export</string>
    <string name="failed_to_import">Failed to import</string>
    <string name="female">Female</string>
    <string name="guest_details">Guest Details</string>
    <string name="guest_invitations">Guest Invitations</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="import_successfully">Import Successfully</string>
    <string name="invitation">Invitation</string>
    <string name="invitation_sent">Invitation Sent</string>
    <string name="kicks">Kicks</string>
    <string name="local_backup">Local Backup</string>
    <string name="male">Male</string>
    <string name="manage_categories_like_add_or_update_category">Manage Categories like add or update category</string>
    <string name="manage_category">Manage Category</string>
    <string name="manage_marriages">Manage Wedding</string>
    <string name="manage_marriages_like_add_or_update_marriage">Manage Marriages like add or update marriage</string>
    <string name="manage_profile">Manage profile</string>
    <string name="merge">Merge</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="name">Name</string>
    <string name="noData">No data found</string>
    <string name="noDataDescBackup">Please backup your data to restore</string>
    <string name="noDataDescCategory">Please add your Category</string>
    <string name="noDataDescCosts">Please add your Budget</string>
    <string name="noDataDescDemo">Please add your demo items</string>
    <string name="noDataDescGuests">Please add your Guests</string>
    <string name="noDataDescProfile">Please add your Marriages</string>
    <string name="noDataDescReport">Export reports to check or share</string>
    <string name="noDataDescTasks">Please add your Tasks</string>
    <string name="noDataDescVendors">Please add your Vendors</string>
    <string name="noDataTitleBackup">No backup found</string>
    <string name="noDataTitleCategory">No Category found</string>
    <string name="noDataTitleCosts">No Budget found</string>
    <string name="noDataTitleDemo">No demo items</string>
    <string name="noDataTitleGuests">No Guests found</string>
    <string name="noDataTitleProfile">No Marriage found</string>
    <string name="noDataTitleReport">No Reports found</string>
    <string name="noDataTitleTasks">No Tasks found</string>
    <string name="noDataTitleVendors">No Vendors found</string>
    <string name="no_companions_found">No Companions found</string>
    <string name="no_payment_found">No payment found</string>
    <string name="no_subtask_found">No subtask found</string>
    <string name="non_personalized">No, see ads that are less relevant</string>
    <string name="not_sent">Not Sent</string>
    <string name="note">Note</string>
    <string name="notification_about_pending_payment">Notification about pending payment</string>
    <string name="notification_about_pending_sending_invitation">Notification about pending sending invitation</string>
    <string name="notification_about_pending_tasks">Notification about pending tasks</string>
    <string name="now_you_can_purchase_advertisement_free_version_of_our_application">Now you can purchase advertisement free version of our application.</string>
    <string name="ok">Ok</string>
    <string name="other">Other</string>
    <string name="paid">Paid</string>
    <string name="paid_date">Paid Date</string>
    <string name="partner_detail">Partner detail</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="payment_status">Payment status</string>
    <string name="pdf_report">Pdf Report</string>
    <string name="pending">Pending</string>
    <string name="permissionDisclose">Permission Disclosure</string>
    <string name="personalized">Yes, continue to see relevant ads</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="save">Save</string>
    <string name="select_date">Select date</string>
    <string name="task_status">Task status</string>
    <string name="termsOfService">Terms Of Service</string>
    <string name="termsOfServiceSummery">This app is governed by MS International’s Terms of Service. By continuing to use this app you represent that you have read and accept the Terms of Service, Privacy Policy and Permission disclosure.</string>
    <string name="view_reports">View Reports</string>
</resources>