<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/linMain" android:tag="layout/activity_sub_task_add_edit_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/includedToolbar" layout="@layout/toolbar_binding"/>
    <androidx.core.widget.NestedScrollView android:id="@+id/scrollRoot" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:id="@+id/linRoot" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView style="@style/CardViewCommon">
                <LinearLayout android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="4dp">
                        <TextView android:layout_width="match_parent" android:text="@string/name" android:layout_weight="1" style="@style/TextViewLightCommon"/>
                        <EditText android:id="@+id/etName" android:tag="binding_1" android:hint="@string/name" android:singleLine="true" style="@style/EditTextCommon"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:layout_width="match_parent" android:text="@string/note" android:layout_weight="1" style="@style/TextViewLightCommon"/>
                        <EditText android:id="@+id/etNote" android:tag="binding_2" android:layout_marginBottom="4dp" android:hint="@string/note" android:minLines="2" android:inputType="textMultiLine" style="@style/EditTextCommon"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="4dp">
                        <TextView android:layout_width="match_parent" android:text="@string/task_status" android:layout_weight="1" style="@style/TextViewLightCommon"/>
                        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                            <TextView android:gravity="center" android:id="@+id/txtPending" android:tag="binding_3" android:text="@string/pending" android:layout_weight="1" style="@style/TextViewLightSquareCommon"/>
                            <TextView android:gravity="center" android:id="@+id/txtPaid" android:tag="binding_4" android:text="@string/completed" android:layout_weight="1" style="@style/TextViewLightSquareCommon"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <Button android:id="@+id/btnAddEdit" android:visibility="gone" android:text="@string/save" style="@style/ButtonCommon"/>
</LinearLayout>
