<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/alert_dialog_pdf_report_0" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/white" app:cardCornerRadius="8dp">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18dp" android:textColor="@color/actionbar" android:layout_gravity="center" android:id="@+id/txtTitle" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pdf_report" android:layout_weight="1" android:fontFamily="@font/regular"/>
                <ImageView android:id="@+id/imgAdd" android:src="@drawable/close" app:tint="@color/actionbar" style="@style/ImageViewButtonCommon"/>
            </LinearLayout>
            <View android:background="@color/actionbar" android:layout_width="match_parent" android:layout_height="1dp"/>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp">
                <Button android:id="@+id/btnExport" android:text="@string/export_to_pdf" style="@style/ButtonCommon"/>
                <Button android:id="@+id/btnReports" android:text="@string/view_reports" style="@style/ButtonCommon"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
