<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edecec">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/agreeAndContinue"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:src="@drawable/privacy_policy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/termsOfService"
                android:textColor="#1a73e8"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/termsOfServiceSummery"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/termsOfService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:onClick="onClick"
                android:paddingTop="4dp"
                android:paddingBottom="5dp"
                android:text="@string/termsOfService"
                android:textAllCaps="true"
                android:textColor="#1a73e8"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:onClick="onClick"
                android:paddingTop="4dp"
                android:paddingBottom="5dp"
                android:text="@string/privacy_policy"
                android:textAllCaps="true"
                android:textColor="#1a73e8"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:onClick="onClick"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/permissionDisclose"
                android:textAllCaps="true"
                android:textColor="#1a73e8"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/agreeAndContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/agree_and_continue"
        android:onClick="onClick"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/acceptAndContinue"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />
</RelativeLayout>
