<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/alert_dialog_restore_0" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@android:color/white" app:cardCornerRadius="8dp">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="18dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/txtTitle" android:background="@color/actionbar" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_name" android:fontFamily="@font/semibold"/>
            <View android:background="@color/actionbar" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp"/>
            <TextView android:textSize="14dp" android:textColor="@color/textColorRegular" android:ellipsize="end" android:gravity="center" android:id="@+id/txtDec" android:padding="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" android:maxLines="6" android:lineSpacingExtra="4dp" android:fontFamily="@font/regular"/>
            <View android:background="@color/textColorRegular" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="1dp"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/linButton" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btnCancel" android:background="@drawable/rounded_rectangle" android:padding="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/cancel" android:layout_weight="1" android:textAllCaps="true" android:fontFamily="@font/regular"/>
                <View android:background="@color/textColorRegular" android:visibility="gone" android:layout_width="1dp" android:layout_height="match_parent"/>
                <TextView android:textSize="18dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btnDelete" android:background="@drawable/rounded_rectangle" android:padding="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/delete" android:layout_weight="1" android:textAllCaps="true" android:fontFamily="@font/regular"/>
                <View android:background="@color/textColorRegular" android:visibility="gone" android:layout_width="1dp" android:layout_height="match_parent"/>
                <TextView android:textSize="18dp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btnMerge" android:background="@drawable/rounded_rectangle" android:padding="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/merge" android:layout_weight="1" android:textAllCaps="true" android:fontFamily="@font/regular"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
